# CRM_SUPPORT

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  support_crm.db
backend/: .env.example  README.md  pyproject.toml  requirements.txt  support_crm.db
backend/app/: db.py  main.py  models.py  schemas.py
frontend/: README.md  index.html  package-lock.json  package.json  tsconfig.node.json
frontend/src/: App.tsx  styles.css
frontend/src/components/: PriorityBadge.tsx  StatusBadge.tsx  Toast.tsx
frontend/src/lib/: api.ts  auth.ts
frontend/src/pages/: LoginPage.tsx  NewTicketPage.tsx  TicketDetailPage.tsx  TicketListPage.tsx
