 [project]
 name = "support-crm-backend"
 version = "0.1.0"
 description = "Support CRM backend (FastAPI + SQLite)"
 requires-python = ">=3.10"
 dependencies = [
   "fastapi>=0.115.0",
   "uvicorn[standard]>=0.30.0",
   "sqlmodel>=0.0.22",
   "pydantic>=2.7.0",
 ]
 
 [tool.uvicorn]
 factory = false
 
